grammar.js
    source_file: ($) => repeat($._module_member),
    _module_member: ($) =>
      choice(
        $.module_declaration,
        $.class_declaration,
        $.function_declaration,
        $.variable_declaration,
        $.enum_declaration,
        $.typedef_declaration,
        $.using_declaration,
        $.import_declaration,
        $.alias_declaration,
        $.empty_statement,
      ),
    _decorators: ($) =>
      choice(seq($.annotations, repeat($.modifier)), repeat1($.modifier)),
    _symbol_name: ($) =>
      prec(-1, choice($.identifier, alias(choice(...KEYWORDS), $.identifier))),

    _qualified_name: ($) => choice($.identifier, $.qualified_name),
    function_declaration: ($) =>
      seq(
        optional($._decorators),
        "function",
        field("name", $.identifier),
        field("parameters", $.parameters),
        optional(field("return_type", $.return_type)),
        choice(field("body", $.block), ";"),
      ),
    parameters: ($) => seq("(", commaSep($.parameter), ")"),
    parameter: ($) =>
      seq(
        field("name", $.identifier),
        optional(field("type", $.type_annotation)),
      ),
    return_type: ($) => seq("as", choice($._type, $.void_type)),
    variable_declaration: ($) =>
      seq(
        optional($._decorators),
        field("kind", choice("var", "const")),
        commaSep1($.variable_declarator),
        ";",
      ),
    variable_declarator: ($) =>
      seq(
        field("name", $.identifier),
        optional(field("type", $.type_annotation)),
        optional(seq("=", field("value", $._expression))),
      ),
    typedef_declaration: ($) =>
      seq(
        optional($.annotations),
        "typedef",
        field("name", $.identifier),
        field("type", $.type_annotation),
        ";",
      ),

    type_annotation: ($) => seq("as", $._type),
    _type: ($) => choice($._non_union_type, $.union_type, $.nullable_type),
    _non_union_type: ($) =>
      choice(
        $.type_identifier,
        $.generic_type,
        $.dictionary_type,
        $.tuple_type,
        $.method_type,
        $.interface_type,
        $.null_type,
      ),
    type_identifier: ($) => $._qualified_name,
    null_type: (_) => "Null",
    void_type: (_) => "Void",
    union_type: ($) =>
      prec.dynamic(
        1,
        prec.right(
          seq(
            field("left", $._non_union_type),
            field("operator", choice("or", "|")),
            field("right", $._type),
          ),
        ),
      ),
    nullable_type: ($) => seq(field("type", $._non_union_type), "?"),
    generic_type: ($) =>
      prec.dynamic(
        1,
        seq(
          field("name", $.type_identifier),
          "<",
          field("key", $._type),
          optional(seq(",", field("value", $._type))),
          ">",
        ),
      ),
    tuple_type: ($) => seq("[", commaSep1($._type), optional(","), "]"),
    dictionary_type: ($) =>
      seq("{", commaSep1($.dictionary_type_member), optional(","), "}"),
    dictionary_type_member: ($) =>
      seq(
        field(
          "key",
          choice(
            $.symbol,
            $.number,
            $.signed_number,
            $.string,
            $.character,
            $.boolean,
          ),
        ),
        field("type", $.type_annotation),
      ),
    method_type: ($) =>
      prec.right(
        choice(
          seq(
            "Method",
            field("parameters", $.parameters),
            optional(field("return_type", $.return_type)),
          ),
          seq(
            "(",
            "Method",
            field("parameters", $.parameters),
            optional(field("return_type", $.return_type)),
            ")",
          ),
        ),
      ),
    interface_type: ($) =>
      seq(
        "interface",
        "{",
        repeat1(choice($.function_signature, $.interface_variable)),
        "}",
      ),
    function_signature: ($) =>
      seq(
        "function",
        field("name", $.identifier),
        field("parameters", $.parameters),
        optional(field("return_type", $.return_type)),
        repeat1(";"),
      ),
    interface_variable: ($) =>
      seq(
        "var",
        field("name", $.identifier),
        optional(field("type", $.type_annotation)),
        repeat1(";"),
      ),

    block: ($) => seq("{", repeat($._statement), "}"),
    _statement: ($) =>
      choice(
        $.block,
        $.local_variable_declaration,
        $.expression_statement,
        $.assignment_statement,
        $.update_statement,
        $.if_statement,
        $.while_statement,
        $.do_statement,
        $.for_statement,
        $.switch_statement,
        $.return_statement,
        $.break_statement,
        $.continue_statement,
        $.throw_statement,
        $.try_statement,
        $.empty_statement,
      ),
    local_variable_declaration: ($) =>
      seq("var", commaSep1($.variable_declarator), ";"),
    return_statement: ($) =>
      seq("return", optional(field("value", $._expression)), ";"),
    _expression: ($) => choice($._logical_or, $.conditional_expression),
    _logical_or: ($) =>
      choice($._logical_and, alias($._or_expression, $.binary_expression)),
    _factor: ($) => choice($._unary, $.cast_expression),
    _primary: ($) =>
      choice(
        $.identifier,
        $.number,
        $.string,
        $.character,
        $.boolean,
        $.null,
        $.symbol,
        $.self,
        $.global,
        $.parenthesized_expression,
        $.array_expression,
        $.byte_array_expression,
        $.dictionary_expression,
        $.new_expression,
        $.new_array_expression,
        $.member_expression,
        $.index_expression,
        $.call_expression,
      ),
    parenthesized_expression: ($) => seq("(", $._expression, ")"),
    member_expression: ($) =>
      prec.left(
        PREC.member,
        seq(field("object", $._primary), ".", field("property", $.identifier)),
      ),
    call_expression: ($) =>
      prec(
        PREC.member,
        seq(field("function", $._primary), field("arguments", $.arguments)),
      ),
    arguments: ($) => seq("(", commaSep($._expression), ")"),
    conditional_expression: ($) =>
      prec.right(
        PREC.conditional,
        seq(
          field("condition", $._logical_or),
          "?",
          field("consequence", $._expression),
          ":",
          field("alternative", $._expression),
        ),
      ),
    cast_expression: ($) =>
      prec.left(
        PREC.cast,
        seq(field("value", $._factor), "as", field("type", $._type)),
      ),

    _identifier: (_) => /[a-zA-Z_\u0080-\ufffe][a-zA-Z0-9_\u0080-\ufffe]*/,
    identifier: ($) => choice($._identifier, "Method"),
    symbol: ($) => seq(":", field("name", $._symbol_name)),
    boolean: (_) => choice("true", "false"),
    null: (_) => "null",
    signed_number: ($) => seq(field("operator", choice("+", "-")), $.number),
    // Invalid octal/hex digits are semantic diagnostics in the SDK, not syntax errors.
    number: ($) => choice($._number, "NaN"),
    _number: (_) =>
      token(
        choice(
          /0x[0-9a-zA-Z]+[lL]?/,
          /[0-9]+[lL]?/,
          /(?:0|[1-9][0-9]*)[fd]/,
          /(?:0|[1-9][0-9]*)(?:\.[0-9]+(?:[eE][+-]?[0-9]+)?|[eE][+-]?[0-9]+)[fd]?/,
          /\.[0-9]+(?:[eE][+-]?[0-9]+)?[fd]?/,
        ),
      ),
    string: ($) =>
      seq('"', repeat(choice($.string_content, $.escape_sequence)), '"'),
    string_content: (_) => token.immediate(/[^"\\]+/),
    character: ($) =>
      seq(
        "'",
        choice(
          alias(token.immediate(/[^'\\]/), $.character_content),
          $.escape_sequence,
        ),
        "'",
      ),
